force-app/main/default/objects/Routes__c/Routes__c.object-meta.xml
<CustomObject>
    <label>Routes</label>
    <nameField>
        <displayFormat>RT-{000000000}</displayFormat>
        <label>Route ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Routes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>