force-app/main/default/objects/Routes__c/fields/AA_Flights_LY__c.field-meta.xml
<CustomField>
    <fullName>AA_Flights_LY__c</fullName>
    <description>Flights Count for American Airlines Last Year.</description>
    <label>AA Flights (LY)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>