force-app/main/default/objects/Routes__c/fields/AA_RPK_LY__c.field-meta.xml
<CustomField>
    <fullName>AA_RPK_LY__c</fullName>
    <label>AA RPK (LY)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>