force-app/main/default/objects/Routes__c/fields/AA_Yield__c.field-meta.xml
<CustomField>
    <fullName>AA_Yield__c</fullName>
    <formula>IF(AA_RPK__c = 0, NULL,
(AA_Revenue__c / AA_RPK__c) *100
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AA Yield</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>