force-app/main/default/objects/Routes__c/fields/deletethis__c.field-meta.xml
<CustomField>
    <fullName>deletethis__c</fullName>
    <label>deletethis</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>