force-app/main/default/objects/Routes__c/fields/DOM_Share_Target_This_FY__c.field-meta.xml
<CustomField>
    <fullName>DOM_Share_Target_This_FY__c</fullName>
    <formula>IF ( CONTAINS( Network__c , &quot;Domestic&quot;), 0.8 ,0)</formula>
    <label>DOM Share Target This FY</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>