force-app/main/default/objects/Routes__c/fields/EK_Flights__c.field-meta.xml
<CustomField>
    <fullName>EK_Flights__c</fullName>
    <description>Flights Count for Emirates Current Year.</description>
    <label>EK Flights</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>