force-app/main/default/objects/Routes__c/fields/EK_RPK_LY__c.field-meta.xml
<CustomField>
    <fullName>EK_RPK_LY__c</fullName>
    <label>EK RPK (LY)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>