force-app/main/default/objects/Routes__c/fields/Is_MCA__c.field-meta.xml
<CustomField>
    <fullName>Is_MCA__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is MCA?</label>
    <type>Checkbox</type>
</CustomField>