force-app/main/default/objects/Routes__c/fields/JQ_Flights_LY__c.field-meta.xml
<CustomField>
    <fullName>JQ_Flights_LY__c</fullName>
    <description>Flights Count for Jetstar Last Year.</description>
    <label>JQ Flights (LY)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>