force-app/main/default/objects/Routes__c/fields/JQ_Yield__c.field-meta.xml
<CustomField>
    <fullName>JQ_Yield__c</fullName>
    <formula>IF(JQ_RPK__c=0, NULL,
(JQ_Revenue__c / JQ_RPK__c) *100
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>JQ Yield</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>