force-app/main/default/objects/Routes__c/fields/JQ_Yield_LY__c.field-meta.xml
<CustomField>
    <fullName>JQ_Yield_LY__c</fullName>
    <formula>IF(JQ_RPK_LY__c=0, NULL,
(JQ_Revenue_LY__c / JQ_RPK_LY__c) *100
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>JQ Yield (LY)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>