force-app/main/default/objects/Routes__c/fields/LM__c.field-meta.xml
<CustomField>
    <fullName>LM__c</fullName>
    <defaultValue>false</defaultValue>
    <label>LM</label>
    <type>Checkbox</type>
</CustomField>