force-app/main/default/objects/Routes__c/fields/Network__c.field-meta.xml
<CustomField>
    <fullName>Network__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Network</label>
    <length>255</length>
    <type>Text</type>
</CustomField>