force-app/main/default/objects/Routes__c/fields/O_D_City__c.field-meta.xml
<CustomField>
    <fullName>O_D_City__c</fullName>
    <description>Used for Reporting</description>
    <formula>IF ( CONTAINS ( O_D_Pair__c , &quot;PER&quot;),&quot;Perth&quot;,
IF ( CONTAINS ( O_D_Pair__c , &quot;ADL&quot;),&quot;Adelaide&quot;,
IF ( CONTAINS ( O_D_Pair__c , &quot;SYD&quot;),&quot;Sydney&quot;,
IF ( CONTAINS ( O_D_Pair__c , &quot;MEL&quot;),&quot;Melbourne&quot;,
IF ( CONTAINS ( O_D_Pair__c , &quot;BNE&quot;),&quot;Brisbane&quot;,
IF ( CONTAINS ( O_D_Pair__c , &quot;HOB&quot;),&quot;Hobart&quot;,
IF ( CONTAINS ( O_D_Pair__c , &quot;DRW&quot;),&quot;Darwin&quot;,
IF ( CONTAINS ( O_D_Pair__c , &quot;CBR&quot;),&quot;Canberra&quot;,
&quot;OTHER&quot;))))))))</formula>
    <label>O&amp;D City</label>
    <type>Text</type>
</CustomField>