force-app/main/default/objects/Routes__c/fields/O_D_Pair__c.field-meta.xml
<CustomField>
    <fullName>O_D_Pair__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>O&amp;D Pair</label>
    <length>20</length>
    <type>Text</type>
</CustomField>