force-app/main/default/objects/Routes__c/fields/Period_Year__c.field-meta.xml
<CustomField>
    <fullName>Period_Year__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Period Year</label>
    <length>4</length>
    <type>Text</type>
</CustomField>