force-app/main/default/objects/Routes__c/fields/POS__c.field-meta.xml
<CustomField>
    <fullName>POS__c</fullName>
    <defaultValue>&quot;POS-Australia&quot;</defaultValue>
    <encryptionScheme>None</encryptionScheme>
    <label>POS Location</label>
    <length>100</length>
    <type>Text</type>
</CustomField>