force-app/main/default/objects/Routes__c/fields/POS_Network__c.field-meta.xml
<CustomField>
    <fullName>POS_Network__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>POS Network</label>
    <length>100</length>
    <type>Text</type>
</CustomField>