force-app/main/default/objects/Routes__c/fields/QF_Average_Fare_LY__c.field-meta.xml
<CustomField>
    <fullName>QF_Average_Fare_LY__c</fullName>
    <formula>IF(QF_Flights_LY__c != 0,QF_Revenue_LY__c  /  QF_Flights_LY__c,null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>QF Average Fare (LY)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>