force-app/main/default/objects/Routes__c/fields/QF_Cancellation_Rate__c.field-meta.xml
<CustomField>
    <fullName>QF_Cancellation_Rate__c</fullName>
    <label>QF Cancellation Rate</label>
    <precision>17</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>