force-app/main/default/objects/Routes__c/fields/QF_Cancellation_Rate_LY__c.field-meta.xml
<CustomField>
    <fullName>QF_Cancellation_Rate_LY__c</fullName>
    <label>QF Cancellation Rate (LY)</label>
    <precision>17</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>