force-app/main/default/objects/Routes__c/fields/QF_Flights__c.field-meta.xml
<CustomField>
    <fullName>QF_Flights__c</fullName>
    <label>QF Flights</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>