force-app/main/default/objects/Routes__c/fields/QF_Flights_VLY_Perc__c.field-meta.xml
<CustomField>
    <fullName>QF_Flights_VLY_Perc__c</fullName>
    <formula>IF(QF_Flights_LY__c != 0,(QF_Flights__c / QF_Flights_LY__c) -1,null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>QF Flights (VLY %)</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>