force-app/main/default/objects/Routes__c/fields/QF_MCA_RPK_LY__c.field-meta.xml
<CustomField>
    <fullName>QF_MCA_RPK_LY__c</fullName>
    <label>QF MCA RPK (LY)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>