force-app/main/default/objects/Routes__c/fields/QF_MCA_Yield_LY__c.field-meta.xml
<CustomField>
    <fullName>QF_MCA_Yield_LY__c</fullName>
    <formula>IF(QF_MCA_RPK_LY__c != 0,QF_MCA_Revenue_LY__c / QF_MCA_RPK_LY__c,null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>QF MCA Yield (LY)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>