force-app/main/default/objects/Routes__c/fields/QF_Revenue_Market_Share_VLY__c.field-meta.xml
<CustomField>
    <fullName>QF_Revenue_Market_Share_VLY__c</fullName>
    <formula>QF_Revenue_Market_Share__c - QF_Revenue_Market_Share_LY__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>QF Revenue Market Share (VLY)</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>