force-app/main/default/objects/Routes__c/fields/QF_Revenue_VLY_PPTS__c.field-meta.xml
<CustomField>
    <fullName>QF_Revenue_VLY_PPTS__c</fullName>
    <formula>(QF_Revenue__c - QF_Revenue_LY__c) -1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>QF Revenue (VLY PPTS)</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>