force-app/main/default/objects/Routes__c/fields/QF_VA_Cancellations_Variance_LY__c.field-meta.xml
<CustomField>
    <fullName>QF_VA_Cancellations_Variance_LY__c</fullName>
    <formula>QF_Cancellation_Rate_LY__c - VA_Cancellation_Rate_LY__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>QF-VA Cancellations Variance (LY)</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>