force-app/main/default/objects/Routes__c/fields/QF_VA_On_Time_Arrivals_Variance__c.field-meta.xml
<CustomField>
    <fullName>QF_VA_On_Time_Arrivals_Variance__c</fullName>
    <formula>QF_On_Time_Arrivals__c - VA_On_Time_Arrivals__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Qantas compared to Virgin</inlineHelpText>
    <label>QF-VA On Time Arrivals Variance</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>