force-app/main/default/objects/Routes__c/fields/QF_VA_On_Time_Arrivals_Variance_LY__c.field-meta.xml
<CustomField>
    <fullName>QF_VA_On_Time_Arrivals_Variance_LY__c</fullName>
    <formula>QF_On_Time_Arrivals_LY__c - VA_On_Time_Arrivals_LY__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>QF-VA On Time Arrivals Variance (LY)</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>