force-app/main/default/objects/Routes__c/fields/QF_Yield__c.field-meta.xml
<CustomField>
    <fullName>QF_Yield__c</fullName>
    <formula>IF(QF_RPK__c != 0,(QF_Revenue__c / QF_RPK__c),null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>QF Yield</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>