force-app/main/default/objects/Routes__c/fields/Route_Sort__c.field-meta.xml
<CustomField>
    <fullName>Route_Sort__c</fullName>
    <formula>QCI_ID__c &amp; &quot;| &quot; &amp; Network__c &amp; &quot;| &quot; &amp; TY_Month__c &amp; &quot;| &quot; &amp; O_D_Pair__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Route Sort</label>
    <type>Text</type>
</CustomField>