force-app/main/default/objects/Routes__c/fields/Total_Air_Travel_Spend__c.field-meta.xml
<CustomField>
    <fullName>Total_Air_Travel_Spend__c</fullName>
    <label>Total Air Travel Spend</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>