force-app/main/default/objects/Routes__c/fields/Total_RPK__c.field-meta.xml
<CustomField>
    <fullName>Total_RPK__c</fullName>
    <inlineHelpText>Revenue Passenger Kilometres (RPKs) are a measure of airline traffic calculated by multiplying the number of revenue-paying passengers aboard a flight by the distance traveled.</inlineHelpText>
    <label>Total RPK</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>