force-app/main/default/objects/Routes__c/fields/Travel_Month__c.field-meta.xml
<CustomField>
    <fullName>Travel_Month__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Travel Month</label>
    <type>Date</type>
</CustomField>