force-app/main/default/objects/Routes__c/fields/TY_Month__c.field-meta.xml
<CustomField>
    <fullName>TY_Month__c</fullName>
    <formula>Period_Year__c &amp; &quot;-&quot; &amp; Month_No__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>TY Month</label>
    <type>Text</type>
</CustomField>