force-app/main/default/objects/Routes__c/fields/VA_Cancellation_Rate__c.field-meta.xml
<CustomField>
    <fullName>VA_Cancellation_Rate__c</fullName>
    <label>VA Cancellation Rate</label>
    <precision>17</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>