force-app/main/default/objects/Routes__c/fields/VA_Capacity_Share__c.field-meta.xml
<CustomField>
    <fullName>VA_Capacity_Share__c</fullName>
    <label>VA Capacity Share</label>
    <precision>17</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>