force-app/main/default/objects/Routes__c/fields/VA_On_Time_Departures_LY__c.field-meta.xml
<CustomField>
    <fullName>VA_On_Time_Departures_LY__c</fullName>
    <label>VA On Time Departures (LY)</label>
    <precision>17</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>