force-app/main/default/objects/Routes__c/fields/Yield_Premium_LY__c.field-meta.xml
<CustomField>
    <fullName>Yield_Premium_LY__c</fullName>
    <formula>IF(YY_Yield_LY__c != 0,(QF_Yield_LY__c / YY_Yield_LY__c) -1,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Yield Premium (LY)</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>