force-app/main/default/objects/Routes__c/fields/YY_Flights__c.field-meta.xml
<CustomField>
    <fullName>YY_Flights__c</fullName>
    <description>Flights Count for Other Airlines Current Year.</description>
    <label>YY Flights</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>