force-app/main/default/objects/Routes__c/fields/YY_Flights_VLY__c.field-meta.xml
<CustomField>
    <fullName>YY_Flights_VLY__c</fullName>
    <formula>IF( YY_Flights_LY__c != 0,( YY_Flights__c / YY_Flights_LY__c) -1,null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>YY Flights (VLY %)</label>
    <precision>18</precision>
    <scale>1</scale>
    <type>Percent</type>
</CustomField>