force-app/main/default/objects/Routes__c/fields/YY_Yield__c.field-meta.xml
<CustomField>
    <fullName>YY_Yield__c</fullName>
    <formula>IF(YY_RPK__c!= 0,(YY_Revenue__c/ YY_RPK__c),null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>YY Yield</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>