force-app/main/default/objects/Routes__c/listViews/Specific_account.listView-meta.xml
<ListView>
    <fullName>Specific_account</fullName>
    <columns>Account_Name__c</columns>
    <columns>QCI_ID__c</columns>
    <columns>TY_Month__c</columns>
    <columns>Network__c</columns>
    <columns>O_D_Pair__c</columns>
    <columns>EK_Flights__c</columns>
    <columns>JQ_Flights__c</columns>
    <columns>YY_Flights__c</columns>
    <columns>EK_Revenue__c</columns>
    <columns>JQ_Revenue__c</columns>
    <columns>YY_Revenue__c</columns>
    <columns>QF_Revenue__c</columns>
    <columns>QF_Revenue_Market_Share__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>QCI_ID__c</field>
        <operation>equals</operation>
        <value>AAC</value>
    </filters>
    <label>Specific Account</label>
</ListView>